--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             scene: 'scene.yaml'        
             });
         tangramLayer.addTo(map);
-	map.fitBounds(bounds);
+// 	map.fitBounds(bounds);
   map.maxZoom
-//         map.setView([37,-100], 5); 
+        map.setView([34.6,-1116], 6); 
     </script>
 
   </body>
