--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Demo setup -->
     <script>
         var map = L.map('map',{maxZoom: 7});
-	var bounds = [[19,-136],[51,-56]];
+// 	var bounds = [[19,-136],[51,-56]];
 // 	map.setMaxBounds(bounds);
         var tangramLayer = Tangram.leafletLayer({
             scene: 'scene.yaml'        
@@ -45,7 +45,7 @@
         tangramLayer.addTo(map);
 // 	map.fitBounds(bounds);
   map.maxZoom
-        map.setView([34.6,-1116], 6); 
+        map.setView([34.6,-116], 6); 
     </script>
 
   </body>
