--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 // 	var bounds = [[19,-136],[51,-56]];
 // 	map.setMaxBounds(bounds);
         var tangramLayer = Tangram.leafletLayer({
-            scene: 'scene.yaml'        
+            scene: 'scene.yaml',
+			attribution: '<a href="https://wwwnextzen.org/tangram" target="_blank">Nextzen</a> | &copy; OSM contributors | @<a href="https://github.com/burritojustice/california-as-an-island">Learn more</a>'
+
             });
         tangramLayer.addTo(map);
 // 	map.fitBounds(bounds);
